
	* apps/examples/nsh, cxxtest, and helloxx:  C++ initializers should be
	  set once and, preferably, in the context of the task that uses any C++
	  statically initialized classes.  These only becomes an issue is cxxtest
	  or helloxx are built as NSH builtin applications.  Then you want the
	  initialization done in cxxtext or helloxx and not in NSH (and certainly
	  not twice).  Added configuration options to control who does the C++
	  initialization.  NSH now does not do C++ initialization be default and
	  must be configured to do otherwise.  Converserly, cxxtest and helloxx
	  will do C++ initialization unless configured do otherwise (2013-6-21).
	* apps/examples/cxxtext:  Add ostream test as provided by Michael
	  (2013-6-21).
	* apps/examples/nxhello:  Minor fix for compilation error when the
	  display resolution is low (< 8bpp) due to a typo that has been there
	  for a long time (2013-6-23).
	* apps/examplex/nxhello:  Correct default colors when in Y1 code mode.
	  (2013-6-24).
	* apps/system/Make.defs and Kconfig:  The RAM test was not correctly built
	  into the configuration and build system (2013-6-26).
	* apps/examples/composite/composite_main.c:  SourceForge But Ticket #19.
	  Change to prevent some false alarm debug assertions (From Chia Cheng
	  Tao, 2013-7-9).
	* apps/system/zmodem:  Add configuration support and a build framework
	  for the Zmodem sz and rz command (which exist but have not yet been
	  checked in) (2013-7-12).
	* apps/system/zmodem:  The 'sz' command is now complete and seems
	  functional (given on light testing).  The rz command logic exists but
	  is still untested and not yet checked in  (2013-7-13).
	* apps/system/zmodem:  The 'rz' command is now complete and functional
	  under certain conditaions.  There are, however, some data overrun
	  issues that I am still uncertain how should be handled (2012-7-15).
	* apps/system/zmodem/Makefile.host and host/: The Zmodem utilities
	  can now be built to execute on a Linux host.
