@@ -612,4 +612,6 @@
 	  issues that I am still uncertain how should be handled (2012-7-15).
 	* apps/system/zmodem/Makefile.host and host/: The Zmodem utilities
 	  can now be built to execute on a Linux host.
-
+	* apps/nshlib/nsh_fscmds.c:  Add a 'cmp' command that can be used to
+	  compare two files for equivalence.  Returns an indication if the files
+	  differ.  Contributed by Andrew Twidgell (via Lorenz Meier) (2013-7-18).
